# antomic

./: .clang-format  .gitignore  CMakeLists.glm.in  CMakeLists.glm.txt  CMakeLists.google.txt  CMakeLists.imgui.txt  CMakeLists.json.txt  CMakeLists.spdlog.in  CMakeLists.spdlog.txt  CMakeLists.txt  azure-pipelines.yml  build.ps1  build.sh  clean.sh  config.h.in  debug.sh  dependencies.git  dependencies.sh  ide.ps1  release.sh  results.json  settings.json  setup.sh
assets/shaders/2d/: fs_sprite.glsl  vs_sprite.glsl
assets/shaders/materials/: fs_basic.glsl  vs_basic.glsl
assets/shaders/opengl/: fs_demo_1.glsl
cmake/asdl/: FindASDL.cmake
docs/: VM.md  operator-precedence.txt
editor/: CMakeLists.txt  Editor.cpp  Editor.h  ImGUI.cpp  ImGUI.h  ImGUILayer.cpp  ImGUILayer.h  ImGUIRenderer.cpp  ImGUIRenderer.h  main.cpp
engine/: Application.cpp  Application.h  CMakeLists.txt  Game.cpp  Platform.h  Platform_SDL.cpp  Singleton.h  engine.h  enginepch.c  enginepch.cpp  enginepch.h  stdlib.h  vendors.h
engine/Core/: Application.cpp  Application.h  Base.h  Cameras.cpp  Cameras.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Serialization.cpp  Serialization.h  Singleton.h  Window.h
engine/Events/: ApplicationEvent.h  Event.h  GamepadEvent.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
engine/Graph/: Node.cpp  Node.h  Scene.cpp  Scene.h
engine/Graph/2D/: Node2d.cpp  Node2d.h  SpriteNode.cpp  SpriteNode.h  TestNode2d.cpp  TestNode2d.h
engine/Graph/3D/: Node3d.cpp  Node3d.h  TestNode3d.cpp  TestNode3d.h
engine/Input/: Input.cpp  Input.h
engine/Input/SDL/: InputSDL.cpp  InputSDL.h
engine/Layers/: GUILayer.cpp  GUILayer.h
engine/Platform/: Input.cpp  Input.h  Platform.cpp  Platform.h  Platform_SDL.cpp  RenderAPI.cpp  RenderAPI.h  RendererAPI.cpp  RendererAPI.h  Window.h
engine/Platform/GLFW/: Input.cpp  Input.h  Window.cpp  Window.h
engine/Platform/Linux/: Platform.cpp  Platform.h
engine/Platform/Linux/SDL/: Input.cpp  Input.h  Utils.h  Window.cpp  Window.h
engine/Platform/NullRenderer/: Buffers.cpp  Buffers.h  RenderAPI.cpp  RenderAPI.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.h  VertexArray.cpp  VertexArray.h
engine/Platform/OpenGL/: Buffers.cpp  Buffers.h  RenderAPI.cpp  RenderAPI.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
engine/Platform/SDL/: Input.cpp  Input.h  PlatformSDL.cpp  PlatformSDL.h  Platform_SDL.cpp  Utils.h  Window.cpp  Window.h
engine/Platform/Windows/: Platform.cpp  Platform.h  PlatformWindows.cpp  PlatformWindows.h
engine/Platform/Windows/SDL/: Input.cpp  Input.h  Utils.h  Window.cpp  Window.h
engine/Profiling/: Instrumentor.h
engine/Python/Parser/: Lexer.cpp  Lexer.h  Reader.cpp  Reader.h  python.asdl
engine/Renderer/: Bindable.h  Buffers.cpp  Buffers.h  Camera.h  Canvas.cpp  Canvas.h  Drawable.cpp  Drawable.h  Material.h  Mesh.cpp  Mesh.h  Render2d.cpp  Render2d.h  RenderAPI.cpp  RenderAPI.h  RenderCommand.h  Renderer.cpp  Renderer.h  RendererFrame.cpp  RendererFrame.h  RendererWorker.cpp  RendererWorker.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
engine/Renderer/Materials/: BasicMaterial.cpp  BasicMaterial.h
engine/Renderer/OpenGL/: RendererGL.cpp  RendererGL.h
engine/Script/: ScriptEngine.cpp  ScriptEngine.h  ScriptEnvironment.h  ScriptObject.h  ScriptScope.cpp  ScriptScope.h  grammar.asdl
engine/Script/Parser/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Reader.cpp  Reader.h
engine/Script/Types/: Bool.h  Dict.h  Float.h  Function.h  Int.h  Int2.h  Int3.h  Int4.h  List.h  Mat3.h  Mat4.h  Module.h  None.h  String.h  Types.h  Vec2.h  Vec3.h  Vec4.h
engine/Script/VM/: Compiler.cpp  Compiler.h
glad/: CMakeLists.txt
launcher/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
media/shaders/materials/: vs_basic.glsl
media/shaders/opengl/: vs_demo_1.glsl
src/: Game.cpp  Game.h  Log.cpp  Log.h  Platform.cpp  Platform.h  Platform_SDL.cpp  Singleton.h  main.cpp
tests/: CMakeLists.txt  core_tests.cpp
tests/CoreTests/: CMakeLists.txt  Layers.cpp  Serialization.cpp
tests/GraphTests/: CMakeLists.txt  Node2d.cpp  Node3d.cpp  TestNode2d.cpp  TestNode2d.h  TestNode3d.cpp  TestNode3d.h  graph_tests 2d.cpp  graph_tests.cpp  graph_tests_3d.cpp
tests/PythonTests/: CMakeLists.txt  LexerTests.cpp
tests/RendererTests/: CMakeLists.txt  bufferlayout_tests.cpp
tests/ScriptTests/: AsdlTests.cpp  AstTests.cpp  CMakeLists.txt  LexerTests.cpp  ParserTests.cpp  main.cpp
tests/files/: lexer_test.py  parser_test.py  test.py
tools/asdl/: asdl.py  asdl_cpp.py
